src/objects/Document_OCR_Request__c/Document_OCR_Request__c.object-meta.xml
<CustomObject>
    <label>Document OCR Request</label>
    <nameField>
        <displayFormat>DOR-{0000}</displayFormat>
        <label>Document OCR Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document OCR Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>