src/objects/Document_OCR_Request__c/fields/Approved_with_Error__c.field-meta.xml
<CustomField>
    <fullName>Approved_with_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved with Error</label>
    <type>Checkbox</type>
</CustomField>