src/objects/Document_OCR_Request__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attachment</label>
    <referenceTo>Attachment__c</referenceTo>
    <relationshipLabel>Document OCR Requests</relationshipLabel>
    <relationshipName>Document_OCR_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>