src/objects/Document_OCR_Request__c/fields/Attachment_Std__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Std__c</fullName>
    <label>Attachment Std</label>
    <length>18</length>
    <type>Text</type>
</CustomField>