src/objects/Document_OCR_Request__c/fields/Collection_Agency__c.field-meta.xml
<CustomField>
    <fullName>Collection_Agency__c</fullName>
    <label>Collection Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>