src/objects/Document_OCR_Request__c/fields/Creditor_Interaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Interaction_Status__c</fullName>
    <formula>TEXT(Attachment__r.Creditor__r.Creditor_Interactions__r.Offer_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creditor Interaction Status</label>
    <type>Text</type>
</CustomField>