src/objects/Document_OCR_Request__c/fields/Creditor_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Phone_Number__c</fullName>
    <label>Creditor Phone Number</label>
    <type>Phone</type>
</CustomField>