src/objects/Document_OCR_Request__c/fields/Current_Creditor__c.field-meta.xml
<CustomField>
    <fullName>Current_Creditor__c</fullName>
    <label>Current Creditor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>