src/objects/Document_OCR_Request__c/fields/Doc__c.field-meta.xml
<CustomField>
    <fullName>Doc__c</fullName>
    <formula>HYPERLINK(&quot;https://app.docsumo.com/review-document/&quot;&amp; Docsumo_Doc_Id__c , &quot;Review&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Docsumo Review Link</label>
    <type>Text</type>
</CustomField>