src/objects/Document_OCR_Request__c/fields/DOC_OCR_PS_Rows_Count__c.field-meta.xml
<CustomField>
    <fullName>DOC_OCR_PS_Rows_Count__c</fullName>
    <label>DOC OCR PS Rows Count</label>
    <summaryForeignKey>Document_OCR_Request_PS_Row__c.Document_OCR_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>