src/objects/Document_OCR_Request__c/fields/DOC_OCR_PS_Rows_Sum__c.field-meta.xml
<CustomField>
    <fullName>DOC_OCR_PS_Rows_Sum__c</fullName>
    <label>DOC OCR PS Rows Sum</label>
    <summarizedField>Document_OCR_Request_PS_Row__c.Payment_Amount__c</summarizedField>
    <summaryForeignKey>Document_OCR_Request_PS_Row__c.Document_OCR_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>