src/objects/Document_OCR_Request__c/fields/Docsumo_Doc_Id__c.field-meta.xml
<CustomField>
    <fullName>Docsumo_Doc_Id__c</fullName>
    <externalId>true</externalId>
    <label>Docsumo Doc Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>