src/objects/Document_OCR_Request__c/fields/DS_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>DS_ID_Number__c</fullName>
    <label>DS ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>