src/objects/Document_OCR_Request__c/fields/First_Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Due_Date__c</fullName>
    <label>First Payment Due Date</label>
    <type>Date</type>
</CustomField>