src/objects/Document_OCR_Request__c/fields/Manual_Review_Completed_By_User__c.field-meta.xml
<CustomField>
    <fullName>Manual_Review_Completed_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manual Review Completed By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Document_OCR_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>