src/objects/Document_OCR_Request__c/fields/Original_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Account_Number__c</fullName>
    <label>Original Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>