src/objects/Document_OCR_Request__c/fields/Original_Creditor_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Creditor_Name__c</fullName>
    <label>Original Creditor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>