src/objects/Document_OCR_Request__c/fields/Payment_Table__c.field-meta.xml
<CustomField>
    <fullName>Payment_Table__c</fullName>
    <label>Payment Table</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>