src/objects/Document_OCR_Request__c/fields/Review_URL__c.field-meta.xml
<CustomField>
    <fullName>Review_URL__c</fullName>
    <label>Review URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>