src/objects/Document_OCR_Request__c/fields/SIF_Letter_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>SIF_Letter_Phone_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SIF Letter Phone Number</label>
    <referenceTo>SIF_letter_Phone_Number__c</referenceTo>
    <relationshipLabel>Document OCR Requests</relationshipLabel>
    <relationshipName>Document_OCR_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>