src/objects/Document_OCR_Request__c/fields/SIF_Letter_Source__c.field-meta.xml
<CustomField>
    <fullName>SIF_Letter_Source__c</fullName>
    <formula>SIF_Letter_Phone_Number__r.SIF_Letter_Source__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIF Letter Source</label>
    <type>Text</type>
</CustomField>