src/objects/Document_OCR_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>erred</fullName>
            </value>
            <value>
                <fullName>new</fullName>
            </value>
            <value>
                <fullName>processed</fullName>
            </value>
            <value>
                <fullName>reviewing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>