src/objects/Document_OCR_Request__c/fields/Total_Payments_Term__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments_Term__c</fullName>
    <label>Total Payments Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>