src/objects/Document_OCR_Request__c/listViews/OCR_SIF_BOT_Document_OCR_Request.listView-meta.xml
<ListView>
    <fullName>OCR_SIF_BOT_Document_OCR_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>OCR/SIF BOT</label>
    <queue>OCR_SIF_BOT</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>